2001-08-28  Andrew Cagney  <cagney@toribio.toronto.redhat.com>

	* frame.h (struct frame_info): Fix documentation on fields
	saved_regs, next and prev.

2001-08-23  Mark Kettenis  <kettenis@gnu.org>

	* event-top.c (async_stop_sig) [HAVE_SIGPROCMASK]: Some
	gratuitious whitespace changes.
	[!HAVE_SIGPROCMASK]: Call sigsetmask if HAVE_SIGSETMASK is defined.
	* top.c: Remove redundant logic to define HAVE_SIGSETMASK.
	(sigsetmask) Don't define macro.
	(stop_sig) [HAVE_SIGPROCMASK]: Add bit of code snatched from
	async_stop_sig from event-top.c.
	[!HAVE_SIGPROCMASK]: Call sigsetmask if HAVE_SIGSETMASK is
	defined.
	* configure.in (AC_CHECK_FUNCS): Put functions in alphabetical
	order.  Add sigsetmask.
	(AC_FUNC_VFORK, AC_FUNC_ALLOCA): Reorder such that they're in
	alphabetical order.
	* config/xm-aix4.h, config/alpha/xm-alphalinux.h,
	config/i386/xm-cygwin.h, config/rs6000/xm-rs6000.h
	(HAVE_SIGSETMASK): Remove.
	* aclocal.m4, config.in, configure

2001-08-26  Andrew Cagney  <ac131313@redhat.com>

	From 2001-06-29 Andrew Cagney  <ac131313@redhat.com>:
	* config/powerpc/nbsd.mh (XM_FILE): Delete.

2001-08-21  Andrew Cagney  <ac131313@redhat.com>

	* doublest.h (HOST_FLOAT_FORMAT): Delete macro.
	(HOST_DOUBLE_FORMAT): Delete macro.

2001-08-24  Mark Kettenis  <kettenis@gnu.org>

	* config/xm-lynx.h, config/xm-nbsd.h, config/xm-sysv4.h,
	config/i386/xm-i386aix.h, config/m68k/xm-dpx2.h: Remove redundant
	inclusion of <limits.h>.

2001-08-24  Andrew Cagney  <ac131313@redhat.com>

	* regcache.c (read_register_bytes): When REGISTER_NAME indicates
	that a register should be ignored, supply a value for the register
	from the raw registers[] buffer.

2001-08-24  Andrew Cagney  <ac131313@redhat.com>

	* go32-nat.c (go32_create_inferior): Use xfree instead of free.
	* config/djgpp/fnchange.lst: Add entries for i386bsd-tdep.c and
	i386bsd-nat.c.

2001-08-21  Andrew Cagney  <ac131313@redhat.com>

	* gdbtypes.h (builtin_type_ieee_single_big)